# mprtpimp

./: .autotools  .cproject  .project  Makefile  README.md  client-H263p.sh  configure.ac  debug.txt  r.txt  s1.txt  s1_.txt  s2_.txt  server-VTS-H263p.sh
src/: Makefile  Makefile.am  gstmprtcpreceiver.c  gstmprtcpreceiver.h  gstmprtpreceiver.c  gstmprtpreceiver.h  gstmprtpsender.c  gstmprtpsender.h  libgstmprtimp.la  libgstmprtpimp.la  libgstmprtpimp_la-gstmprtcpreceiver.lo  libgstmprtpimp_la-gstmprtpreceiver.lo  libgstmprtpimp_la-gstmprtpsender.lo  libgstmprtpimp_la-mprtpimp.lo  libgstmyfilter.la  libgstplugin.la  mprtpimp.c  mprtplibs.h
src/.deps/: libgstmprtpimp_la-gstmprtcpreceiver.Plo  libgstmprtpimp_la-gstmprtpreceiver.Plo  libgstmprtpimp_la-gstmprtpsender.Plo  libgstmprtpimp_la-mprtpimp.Plo
src/.libs/: libgstmprtpimp.exp  libgstmprtpimp.la  libgstmprtpimp.lai  libgstmprtpimp.soT  libgstmprtpimp.ver
tests/: client-H263p.sh  client-rtpaux.c  server-VTS-H263p.sh  server-rtpaux.c
